Fixed flickering on selection

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+::selection {
+	background-color: transparent;
+}
+
 html, body {
 	background : lightgrey;
 }
